--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Heber\\AppData\\Roaming\\NetBeans\\22\\build.properties
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\heber\\Downloads\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
+user.properties.file=C:\\Users\\heber\\AppData\\Roaming\\NetBeans\\22\\build.properties
